
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quoremind"
version = "1.0.0"
authors = [
  { name="Jacobo Tlacaelel Mina Rodriguez", email="jako@example.com" },
]
description = "QuoreMind: Sistema Metripléctico Cuántico-Bayesiano"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/jacobotmr/quoremind"
"Bug Tracker" = "https://github.com/jacobotmr/quoremind/issues"

[project.scripts]
quoremind = "quoremind.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quoremind*"]
